...
            android:layout_height="wrap_content"
            android:textColor="@color/gray_dark"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/logout_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_logout"
        android:drawablePadding="8dp"
...
